[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "extjson"
version = "0.1.0"
description = "Extended JSON serialization library supporting main BSON types (datetime, bytes, UUID, Decimal, …)"
authors = [{name = "Pascal Chambon"}]
license = {text = "MIT"}
requires-python = ">=3.10"

[tool.poetry]
packages = [{include = "extjson.py"}]

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0"
pytz = ">=2021.1"
